Stying overflow bugfix on betting slip

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -217,7 +217,7 @@ div.main {
 	}
 
 	slip, .placed-bets {
-		width: 100%;
+		width: 100vw;
 		background: linear-gradient(0deg,#413f3f,#808080);
 
 
@@ -345,7 +345,8 @@ div.main {
 		position: fixed;
 		bottom: 0;
 		max-height: 27.5rem;
-		overflow-y: scroll;	
+		overflow-y: scroll;
+		overflow-x: hidden;	
 		z-index: 2;	
 		@include prefixer(transform,translateY(calc(100% - var(--slipHeaderHeight))));
 		.bet-name-group {
